--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
         "prepublishOnly": "npm run test && npm run lint",
         "prepare": "npm run build",
         "test": "jest",
-        "test:coverage": "npx jest --coverage --colors",
-        "make-badges": "npm run test:coverage && istanbul-badges-readme --coverageDir='./__test__/coverage' --statementsLabel='Test Coverage'",
+        "test:coverage": "npx jest && codecov",
         "build": "tsc",
         "lint": "eslint --ext .ts"
     },
@@ -28,6 +27,7 @@
         "@types/vfile-message": "1.0.1",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
+        "codecov": "^3.8.2",
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^6.12.0",
         "eslint-plugin-deprecation": "^1.1.0",
@@ -38,7 +38,6 @@
         "eslint-plugin-react": "^7.21.4",
         "eslint-plugin-react-hooks": "^4.1.2",
         "eslint-plugin-unicorn": "^22.0.0",
-        "istanbul-badges-readme": "^1.4.0",
         "jest": "^26.6.3",
         "nock": "^13.0.4",
         "prettier": "^2.1.2",
