--- a/.github/workflows/test-prs.yml
+++ b/.github/workflows/test-prs.yml
@@ -41,5 +41,9 @@ jobs:
                 key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
                 restore-keys: |
                   ${{ runner.os }}-node-
-            - name: Create coverage reports
+            - name: Run tests
               run: npm install && npm run test:coverage
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v1
+              with:
+                directory: ./coverage/
